src/components/feelSpecial/feelSpecial.css
.feel-special {
  width: 100vw;
  min-height: 100vh;
  padding: 24rem 0px 18rem 0px;
  background-color: var(--bg-red);
  background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/deserve-more-bg.jpg);
  background-size: cover;
}

.photo-section {
  height: 100%;
  min-height: 100vh;
  min-width: 100vw;
  background-size: cover;
}

.photo-section-child {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.photo-section-heading {
  font-size: 10rem;
  letter-spacing: -3.15px;
  opacity: 0.9;
  white-space: pre-line;
  width: 50%;
  font-weight: 700;
}

.photo-section-subheading {
  font-size: 3.2rem;
  margin-top: 1.6rem;
  line-height: 38px;
  letter-spacing: -0.2px;
}

.photo-section-description {
  font-size: 1.8rem;
  line-height: 28px;
  white-space: pre-line;
  margin-bottom: 4rem;
  width: 50%;
  font-weight: 600;
}
@media all and (max-width: 1024px) {
  .feel-special {
    background-position: center bottom;
  }
}

@media all and (max-width: 768px) {
  .feel-special {
    padding: 19.5rem 0px 9rem 0px;
    background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/deserve-more-bg-mobile.jpg);
    background-position: right center;
  }
  .photo-section-heading {
    font-size: 6.5rem;
    letter-spacing: -1.95px;
    opacity: 0.9;
    white-space: pre-line;
    width: 50%;
    font-weight: 700;
    line-height: 54px;
  }
  .photo-section-description {
    margin-top: 15rem;
    width: 100%;
  }
}

